	- When selecting a texture-grouped face in UV editor, show an indicator of all faces in group.
	- Improve performance when modifying geometry & UVs in Unity 5.
	- New dark background in UV editor for Unity light skin users.
	- Improve performance when selecting objects with large vertex counts.

# Bug Fixes	
	- Fix crash when a face material is null (defaults to Unity Default-Diffuse).
	- Fix incorrect results when extruding multiple faces sharing a single center vertex (usually seen on the top of a cylinder).
	- Save vertex colors when ProBuilder-izing a mesh.
	- Fix occasional null ref when continuing UVs.
	- Support Undo in UV Editor Auto panel.
	- Support Undo for `Push to Grid` events from ProGrids.
	- Fix occasional `Index out of range` errors when subdividing, triangulating, and setting pivot.
	- Fix crash when running `Fix Missing Script References` in Unity 5.0.0b18 (big thanks to Michael N!)
	- Improve the performance of Planar Mapping manual UVs.
	- Create Material data asset path if it doesn't exist (fixes errors when saving Material preferences).
	- Fix bug where dragging UVs in Unity 5 would sometimes corrupt the mesh.
	- Disable Continuous Baking when dragging elements or making continuous changes to the mesh, fixing corruption issues in Unity 5.
	- Fix occasional erroneous error message when subdividing faces.
	- Fix null ref error when Auto UV panel is open with nothing selected.
	- Allow `V` key usage when not in Element mode.
	- Fix regression where instantiated objects would not respect ProGrids alignment.
	- Fix occasional null ref errors when welding or collapsing vertices.
	- When double-clicking a texture grouped face in UV editor, select the entire group.
	- Fix regression that caused performance spikes when deleting or instantiating objects.
	- When detaching faces to a new object, copy all of that objects properties.
	- Add Undo support to Shape creation tool.