@@ -1,5 +1,0 @@
-fileFormatVersion: 2
-guid: 2fb4b3b9c648c0545a239e834abe61db
-folderAsset: yes
-DefaultImporter:
-  userData: 
